# raylib-scratch

./: .clang-format  .gitignore  License  Makefile  meson.build  meson_options.txt  readme.md
lib/darwin/: libraylib.dylib
lib/shared/: libraylib.so.5.5.0
src/: main.c
